--- a/index.html
+++ b/index.html
@@ -645,6 +645,14 @@ textarea {
                     </ul>
                 </div>
             </nav>
+          <ul class="sidenav center-align black" id="mobile-menu">
+                 <li><a href="index.html" class="active" style="color: #ff1f6d; font-weight: bold; text-decoration: underline;">Home</a></li>
+                        <li><a href="store.html">Merchandise</a></li>
+                        <li><a href="soundtrack.html">Media</a></li>
+               <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="reviews.html">Reviews</a></li>
+                        <li><a href="contacts.html">Contacts</a></li>
+            </ul>
         </div>
     </header>
     <div class="video-container">
