--- a/store.html
+++ b/store.html
@@ -650,7 +650,7 @@ textarea {
                 </ul>
             </div>
         </nav>
-         <ul class="sidenav center-align black" id="mobile-menu">
+         <ul class="sidenav center-align white" id="mobile-menu">
                  <li><a href="index.html" class="active" style="color: #ff1f6d; font-weight: bold; text-decoration: underline;">Home</a></li>
                         <li><a href="store.html">Merchandise</a></li>
                         <li><a href="soundtrack.html">Media</a></li>
